Editando dinossauros - Inclusão de botões de opção para deleção e edição de dinossauros - novo service para edição do dinossauro

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/services/firebaseService.js"></script>
     <script src="js/services/dinossaursService.js"></script>
     <script src="js/services/newDinossaurModal.js"></script>  
+    <script src="js/services/editDinossaurModal.js"></script>  
       
 
     <script src="js/controllers/homeCtrl.js"></script>    
